--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -23,16 +23,13 @@ jobs:
         ruby-version: 3.2.2
         bundler-cache: true
 
-    - name: Create release branch
-      run: git checkout -b release/${{ github.event.inputs.version }}
-
-    - name: Initialize mandatory git config
+    - name: Config Git
       run: |
         git config user.name "CI Bot"
         git config user.email noreply@github.com
 
-    - name: Set MARKETING_VERSION and commit
-      run: bundle exec fastlane set_marketing_version version:${{ github.event.inputs.version }}
+    - name: Create release branch
+      run: git checkout -b release/${{ github.event.inputs.version }}
 
     - name: Push release branch
       run: git push origin release/${{ github.event.inputs.version }}
@@ -43,6 +40,9 @@ jobs:
         head: release/${{ github.event.inputs.version }}
         base: main
         title: ${{ github.event.inputs.version }} into main
+
+    - name: Set MARKETING_VERSION
+      run: bundle exec fastlane set_marketing_version version:${{ github.event.inputs.version }}
 
     # - name: Change version number and name
     #   run: printf 'ext.version_code = ${{ github.event.inputs.versionCode }}\next.version_name = "${{ github.event.inputs.versionName }}"\n' > app_versions.gradle
