--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -9,8 +9,8 @@ on:
 
 jobs:
   create_release:
-    # runs-on: macos-13
-    runs-on: ubuntu-latest
+    runs-on: macos-13
+    # runs-on: ubuntu-latest
     timeout-minutes: 29
     steps:
 
