--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Set GitHub release
       env: 
-        GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
         GITHUB_REPOSITORY_NAME: ${{ github.repository }}
       run: bundle exec fastlane release_to_github version:${{ github.event.inputs.version }}
 
