--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -10,25 +10,24 @@ on:
 jobs:
   publish_release:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true &&
-      (startsWith(github.event.pull_request.head.ref, 'release/') || startsWith(github.event.pull_request.head.ref, 'hotfix/'))
-
+    if: github.event.pull_request.merged == true && (startsWith(github.event.pull_request.head.ref, 'release/') || startsWith(github.event.pull_request.head.ref, 'hotfix/'))
     steps:
-      - name: Extract version from branch name (for release branches)
-        if: startsWith(github.event.pull_request.head.ref, 'release/')
-        run: |
-          BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
-          VERSION=${BRANCH_NAME#release/}
 
-          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+    - name: Extract version from branch name (for release branches)
+      if: startsWith(github.event.pull_request.head.ref, 'release/')
+      run: |
+        BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+        VERSION=${BRANCH_NAME#release/}
 
-      - name: Extract version from branch name (for hotfix branches)
-        if: startsWith(github.event.pull_request.head.ref, 'hotfix/')
-        run: |
-          BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
-          VERSION=${BRANCH_NAME#hotfix/}
+        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
-          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+    - name: Extract version from branch name (for hotfix branches)
+      if: startsWith(github.event.pull_request.head.ref, 'hotfix/')
+      run: |
+        BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+        VERSION=${BRANCH_NAME#hotfix/}
+
+        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Publish release draft
         uses: actions/create-release@v1
