--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -1,11 +1,11 @@
 name: Publish release
 
-on: workflow_dispatch
-  # pull_request:
-  #   branches:
-  #     - main
-  #   types:
-  #     - closed
+on:
+  pull_request:
+    branches:
+      - main
+    types:
+      - closed
 
 jobs:
   publish_release:
@@ -13,28 +13,28 @@ jobs:
     # if: github.event.pull_request.merged == true && (startsWith(github.event.pull_request.head.ref, 'release/') || startsWith(github.event.pull_request.head.ref, 'hotfix/'))
     steps:
 
-    # - name: Extract version from branch name (for release branches)
-    #   if: startsWith(github.event.pull_request.head.ref, 'release/')
-    #   run: |
-    #     BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
-    #     VERSION=${BRANCH_NAME#release/}
+    - name: Extract version from branch name (for release branches)
+      if: startsWith(github.event.pull_request.head.ref, 'release/')
+      run: |
+        BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+        VERSION=${BRANCH_NAME#release/}
 
-    #     echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
-    # - name: Extract version from branch name (for hotfix branches)
-    #   if: startsWith(github.event.pull_request.head.ref, 'hotfix/')
-    #   run: |
-    #     BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
-    #     VERSION=${BRANCH_NAME#hotfix/}
+    - name: Extract version from branch name (for hotfix branches)
+      if: startsWith(github.event.pull_request.head.ref, 'hotfix/')
+      run: |
+        BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+        VERSION=${BRANCH_NAME#hotfix/}
 
-    #     echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Publish release draft
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: 0.0.8
-        name: 0.0.8
+        tag_name: ${{ env.RELEASE_VERSION }}
+        name: ${{ env.RELEASE_VERSION }}
         draft: false
         prerelease: false
