--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -31,17 +31,13 @@ jobs:
     - name: Create release branch
       run: git checkout -b release/${{ github.event.inputs.version }}
 
-    - name: Set MARKETING_VERSION
-      run: bundle exec fastlane set_marketing_version version:${{ github.event.inputs.version }}
-
-    - name: Build xcframework
-      run: bundle exec fastlane build_xcframework
-
-    - name: Set GitHub release
-      env: 
+    - name: Prepeare release
+      env:
         GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
         GITHUB_REPOSITORY_NAME: ${{ github.repository }}
-      run: bundle exec fastlane release_to_github version:${{ github.event.inputs.version }}
+      run: | 
+        RELEASE_ID=bundle exec fastlane prepare_release version:${{ github.event.inputs.version }}
+        echo "RELEASE_ID=$RELEASE_ID" >> $GITHUB_ENV
 
     - name: Update docs
       env:
