--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -35,9 +35,7 @@ jobs:
       env:
         GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
         GITHUB_REPOSITORY_NAME: ${{ github.repository }}
-      run: | 
-        RELEASE_ID=bundle exec fastlane prepare_release version:${{ github.event.inputs.version }}
-        echo "RELEASE_ID=$RELEASE_ID" >> $GITHUB_ENV
+      run: bundle exec fastlane prepare_release version:${{ github.event.inputs.version }}
 
     - name: Update docs
       env:
