--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -29,12 +29,8 @@ jobs:
 
         echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Publish release draft
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Update release
+      uses: ncipollo/release-action@v1
       with:
-        tag_name: ${{ env.RELEASE_VERSION }}
-        name: ${{ env.RELEASE_VERSION }}
-        draft: false
-        prerelease: false
+        allowUpdates: true
+        tag: ${{ env.RELEASE_VERSION }}
