--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -1,18 +1,17 @@
 name: Publish release
 
 on:
-  push:
-    branches:
-    - main
+  pull_request:
+    types:
+      - closed
 
 jobs:
-  publish_release:
+  if_merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged
     steps:
-
-    - name: Echo sth
-      run: echo 'sth..'
+    - run: |
+        echo The PR was merged
 
     # - name: Extract version from branch name (for release branches)
     #   if: startsWith(github.event.pull_request.head.ref, 'release/')
