--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-        echo The PR was merged
+        echo The PR was merged...
 
     # - name: Extract version from branch name (for release branches)
     #   if: startsWith(github.event.pull_request.head.ref, 'release/')
