--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   if_merged:
-    # if: github.event.pull_request.merged
-    if: startsWith(github.event.pull_request.head.ref, 'test2')
+    if: github.event.pull_request.merged && startsWith(github.event.pull_request.head.ref, 'test2')
     runs-on: ubuntu-latest
     steps:
     - run: |
