--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -4,10 +4,12 @@ on:
   pull_request:
     branches:
       - main
+    types:
+      - closed
 
 jobs:
   if_merged:
-    if: github.event.pull_request.merged && startsWith(github.event.pull_request.head.ref, 'test2')
+    if: startsWith(github.event.pull_request.head.ref, 'test3')
     runs-on: ubuntu-latest
     steps:
     - run: |
