--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -32,3 +32,4 @@ jobs:
       with:
         allowUpdates: true
         tag: ${{ env.RELEASE_VERSION }}
+        commit: ${{ github.event.pull_request.head.sha }}
