--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -27,8 +27,17 @@ jobs:
         VERSION=${BRANCH_NAME#hotfix/}
         echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
+    - name: Set up ruby env
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 3.2.2
+        bundler-cache: true
+
     - name: Update release
       uses: ncipollo/release-action@v1
       with:
         allowUpdates: true
         tag: ${{ env.RELEASE_VERSION }}
+
+    - name: Publish pod
+      run: bundle exec pod lib lint
