--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -31,6 +31,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.2.2
+        bundler-cache: true
 
     - name: Update release
       uses: ncipollo/release-action@v1
