--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -27,6 +27,9 @@ jobs:
         VERSION=${BRANCH_NAME#hotfix/}
         echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
+    - name: Checkout Source
+      uses: actions/checkout@v2
+
     - name: Set up ruby env
       uses: ruby/setup-ruby@v1
       with:
