Add publish pod action

--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -46,3 +46,8 @@ jobs:
       run: |
         bundle exec pod spec lint
         swift package dump-package
+
+    - name: Publish pod
+      env: 
+        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+      run: bundle exec pod trunk push
