--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,9 @@ workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
 
+default:
+  tags: [ios]
+
 bundler:install:
   cache: 
     key: ${CI_COMMIT_REF_SLUG}
