Add Install Pods step

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Create release branch
       run: git checkout -b release/${{ github.event.inputs.version }}
 
+    - name: Install pods
+      run: bundle exec pod install --repo-update
+
     - name: Prepeare release
       env:
         GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
